This will be important later :cookie:

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <tr>
         <td>Beer</td>
         <td>Beer</td>
-        <td>Beer</td>
+        <td id="freespace">Pabst Blue Ribbon</td>
         <td>Beer</td>
         <td>Beer</td>
       </tr>
