Start writing some javascripts :curly_loop:

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Shitty Beer Bingo</title>
+  <script type="text/javascript" src="app.js"></script>
   <link href="app.css" rel="stylesheet">
 </head>
 <body>
