Make a simple footer :footprints:

--- a/index.html
+++ b/index.html
@@ -49,4 +49,10 @@
       </tr>
     </tbody>
   </table>
+
+  <footer>
+    <a href="https://github.com/skalnik/shitty-beer-bingo" alt="Source code on GitHub">
+      Made with <img class="emoji" src="beers.png" alt="&hearts;"> by @skalnik
+    </a>
+  </footer>
 </body>
