--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Shitty Beer Bingo</title>
   <script type="text/javascript" src="app.js"></script>
   <link href="app.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="beers.png">
 </head>
 <body>
   <table>
