--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
   <title>Shitty Beer Bingo</title>
-  <script type="text/javascript" src="app.js"></script>
-  <link href="app.css" rel="stylesheet">
+  <script type="text/javascript" src="assets/js/app.js"></script>
+  <link href="assets/style.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="beers.png">
 </head>
 <body>
