Create a BingoCard object & use it :black_joker:

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Shitty Beer Bingo</title>
-  <script type="text/javascript" src="assets/js/app.js"></script>
+  <script data-main="assets/js/app" src="assets/vendor/requirejs/require.js"></script>
   <link href="assets/style.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="beers.png">
 </head>
