Add a reset button :arrows_counterclockwise:

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     </tbody>
   </table>
 
+  <p class="controls"><button type="button" class="js-reset reset">New Card</button>
+
   <footer>
     <a href="https://github.com/skalnik/shitty-beer-bingo" alt="Source code on GitHub">
       Made with <img class="emoji" src="beers.png" alt="&hearts;"> by @skalnik
