Listen to clicks to check things :mouse2:

--- a/index.html
+++ b/index.html
@@ -13,40 +13,40 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
+      <tr data-row="0">
+        <td data-col="0">Beer</td>
+        <td data-col="1">Beer</td>
+        <td data-col="2">Beer</td>
+        <td data-col="3">Beer</td>
+        <td data-col="4">Beer</td>
       </tr>
-      <tr>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
+      <tr data-row="1">
+        <td data-col="0">Beer</td>
+        <td data-col="1">Beer</td>
+        <td data-col="2">Beer</td>
+        <td data-col="3">Beer</td>
+        <td data-col="4">Beer</td>
       </tr>
-      <tr>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td id="freespace">Pabst Blue Ribbon</td>
-        <td>Beer</td>
-        <td>Beer</td>
+      <tr data-row="2">
+        <td data-col="0">Beer</td>
+        <td data-col="1">Beer</td>
+        <td id="freespace" data-col="2">Pabst Blue Ribbon</td>
+        <td data-col="3">Beer</td>
+        <td data-col="4">Beer</td>
       </tr>
-      <tr>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
+      <tr data-row="3">
+        <td data-col="0">Beer</td>
+        <td data-col="1">Beer</td>
+        <td data-col="2">Beer</td>
+        <td data-col="3">Beer</td>
+        <td data-col="4">Beer</td>
       </tr>
-      <tr>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
-        <td>Beer</td>
+      <tr data-row="4">
+        <td data-col="0">Beer</td>
+        <td data-col="1">Beer</td>
+        <td data-col="2">Beer</td>
+        <td data-col="3">Beer</td>
+        <td data-col="4">Beer</td>
       </tr>
     </tbody>
   </table>
