Make things nicer for iOS :iphone:

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <script data-main="assets/js/app" src="assets/vendor/requirejs/require.js"></script>
   <link href="assets/style.css" rel="stylesheet">
   <link rel="icon" type="image/png" href="beers.png">
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <table>
